Working on student form layout issue

--- a/public/assets/css/studentformquestionair.css
+++ b/public/assets/css/studentformquestionair.css
@@ -546,7 +546,6 @@ html {
     outline: none;
     display: block;
     float: left;
-    font-size: 14px;
     line-height: 56px;
     color: white;
     position: relative;
@@ -752,12 +751,10 @@ form {
     display: flex;
     flex-direction: column;
     gap: 31px;
-    margin: 0 auto;
     background-color: #fff;
     border-radius: 8px;
     box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
     padding: 40px 50px;
-    margin-left: 20px;
 }
 
 .input-row {
@@ -832,7 +829,7 @@ form {
     top: 100%;
     left: 0;
     margin-left: -10px;
-    width: 310px;
+    width: 290px;
     background-color: #fff;
     border: 1px solid #ccc;
     border-radius: 4px;
@@ -857,19 +854,18 @@ form {
 @media (min-width: 1500px) {
     .registration-container {
         max-width: 1150px;
+        margin-left: 0;
     }
 
     .registration-form {
-        padding: 40px 60px;
+        padding: 40px 60px; 
+        margin-left: 15%;
+        
     }
 
     .section-02 {
         width: 1050px;
         max-width: 1150px;
-    }
-
-    .input-row {
-        gap: 30px;
     }
 
     .input-group {
@@ -895,13 +891,6 @@ form {
         max-width: 1200px;
     }
 
-    .input-group {
-        width: 320px;
-    }
-
-    .input-content {
-        width: 330px;
-    }
 }
 
 @media screen and (min-width: 1025px) and (max-width: 1300px) {
@@ -1125,9 +1114,9 @@ form {
     }
 
     .registration-container {
-        width: 100%;
+        max-width: 100%;
+        width:380px;
         padding: 0;
-        margin: 0;
         margin: 0 auto;
     }
 
@@ -1209,21 +1198,22 @@ form {
     display: flex;
     flex-direction: column;
     gap: 31px;
+    max-width: 1100px;
+
 }
 
 .section-02 {
-    width: 1000px;
-    height: 171px;
-    margin: 0 auto;
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    gap: 31px;
     background-color: #fff;
     border-radius: 8px;
     box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
-    position: relative;
     padding: 40px 50px;
-    margin-top: -1px;
-    transform: translateX(20px);
+    margin-left: 12%;
 }
-
 
 .input-container {
     display: flex;
@@ -1328,39 +1318,6 @@ form {
     background-color: #f3f3f3;
 }
 
-@media (min-width: 1500px) {
-    .section-02 {
-        width: 1070px;
-        padding: 40px 60px;
-    }
-
-    .dropdown-container-about {
-        width: 310px;
-    }
-
-    .dropdown-option-about-us {
-        width: 310px;
-    }
-
-    .suggestions-container {
-        width: 310px;
-    }
-}
-
-@media (min-width: 1728px) {
-    .section-02 {
-        width: 1100px;
-        padding: 40px 50px;
-    }
-
-    .dropdown-container-about {
-        width: 330px;
-    }
-
-    .suggestions-container {
-        width: 330px;
-    }
-}
 
 @media screen and (min-width: 1025px) and (max-width: 1300px) {
     .section-02 {
@@ -1485,7 +1442,7 @@ form {
     margin-bottom: 50px;
     margin-left: 50px;
     position: absolute;
-    right: -1px;
+    right: 10%;
     z-index: 10;
 }
 
@@ -1651,13 +1608,6 @@ input[type="number"]::-webkit-inner-spin-button {
 
  }
 
-@media (min-width: 1513px) {
-    .navigation {
-        max-width: 1460px;
-        margin: 60px auto;
-        padding-left: 260px;
-    }
-}
 
 @media (min-width: 913px) and (max-width: 1025px) {
     .navigation {
@@ -1689,9 +1639,7 @@ input[type="number"]::-webkit-inner-spin-button {
 
     .navigation {
         order: 2;
-        justify-content: space-between;
         margin-top: 20px;
-        padding: 0px 10px 60px 10px;
     }
 }
 
@@ -1746,7 +1694,6 @@ input[type="number"]::-webkit-inner-spin-button {
 /*------Breadcrumb-----*/
 
 /*course details*/
-
 .course-section {
     background: #ffffff;
     border-radius: 10px;
@@ -1763,11 +1710,11 @@ input[type="number"]::-webkit-inner-spin-button {
     flex-direction: column;
     gap: 31px;
     margin: 0 auto;
+    padding: 40px 50px;
+    margin-left: 20px;
     background-color: #fff;
     border-radius: 8px;
     box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
-    padding: 40px 50px;
-    margin-left: 20px;
 }
 
 .checkbox-group {
@@ -2662,10 +2609,10 @@ h2 {
 
 .academic-container {
     width: 1000px;
-    height: 200px;
+    height: auto;
     display: flex;
     flex-direction: column;
-    margin: 0 auto;
+    margin-left: 10%;
     padding: 40px 50px;
     background-color: #fff;
     border-radius: 8px;
@@ -2872,7 +2819,7 @@ textarea::placeholder {
     display: flex;
     flex-direction: column;
     gap: 31px;
-    margin: 0 auto;
+    margin-left: 10%;
     padding: 40px 50px;
     background-color: #fff;
     border-radius: 8px;
@@ -2884,8 +2831,7 @@ textarea::placeholder {
 .education-label {
     font-size: 12px;
     color: rgba(131, 131, 131, 0.5);
-
-    margin-bottom: 16px;
+    margin:16px 0px;
 }
 
 .input-grid {
@@ -2984,7 +2930,7 @@ textarea::placeholder {
     display: flex;
     flex-direction: column;
     gap: 31px;
-    margin: 0 auto;
+    margin-left: 10%;
     padding: 40px 50px;
     background-color: #fff;
     border-radius: 8px;
@@ -3358,7 +3304,7 @@ p {
     display: flex;
     flex-direction: column;
     gap: 31px;
-    margin: 0 auto;
+    margin-left: 10%;
     padding: 40px 60px;
     background-color: #fff;
     border-radius: 8px;
@@ -3657,7 +3603,7 @@ p {
     display: flex;
     flex-direction: column;
     gap: 31px;
-    margin: 0 auto;
+    margin-left: 10%;
     padding: 40px 60px;
     background-color: #fff;
     border-radius: 8px;
@@ -3800,7 +3746,7 @@ p {
     display: flex;
     flex-direction: column;
     gap: 31px;
-    margin: 0 auto;
+    margin-left: 10%;
     padding: 40px 60px;
     background-color: #fff;
     border-radius: 8px;
@@ -4134,7 +4080,7 @@ p {
     display: flex;
     flex-direction: column;
     gap: 0;
-    margin: 0 auto;
+    margin-left:10%;
     padding: 40px 60px;
     background-color: #fff;
     border-radius: 8px;
@@ -4155,7 +4101,7 @@ p {
     border: none;
     border-radius: 10px;
     padding: 15px;
-    /* width: 100%; */
+    width: 100%;
     text-align: left;
 }
 
@@ -4396,7 +4342,7 @@ input[type="file"] {
     height: auto;
     display: flex;
     flex-direction: column;
-    margin: 0 auto;
+    margin-left: 10%;
     padding: 40px 60px;
     background-color: #fff;
     border-radius: 8px;
@@ -4532,6 +4478,7 @@ input[type="file"] {
     border: 1px solid #ddd;
     border-radius: 4px;
     margin: 10px 0;
+    width:100%;
 }
 
 .upload-field span {
@@ -4603,7 +4550,7 @@ input[type="file"] {
     height: auto;
     display: flex;
     flex-direction: column;
-    margin: 0 auto;
+    margin-left: 10%;
     padding: 40px 60px;
     background-color: #fff;
     border-radius: 8px;
@@ -5029,8 +4976,7 @@ div.salary-sub p {
     position: absolute;
     top: 100%;
     margin-top: 8px;
-    width: 100%;
-    width: 310px;
+    width: 290px;
     margin-left: -10px;
     border: 1px solid #ccc;
     border-radius: 5px;
